feat(jwt/api): change UserPrincipal and JWT to utilize roles